# feast

./: .gitignore  CLAUDE.md  LICENSE  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.beads/: issues.jsonl
.claude/: settings.json
.claude/agents/: codebase-analyzer.md  codebase-finder.md  implementation-debugger.md  integration-finder.md  phase-implementer.md  (+2 more)
src/: App.svelte  app.css
src-tauri/: Cargo.toml  logging.example.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20240101000001_initial_schema.sql  20250115000001_recipes_schema.sql  20250115000002_meal_plans_schema.sql  20250115000003_shopping_lists_schema.sql  20250115000004_quick_lists_schema.sql  20250115000005_manual_items_schema.sql  20251216000001_add_instructions.sql
src-tauri/src/: correlation.rs  lib.rs  main.rs
src-tauri/src/commands/: ingredients.rs  items.rs  logging.rs  manual_items.rs  meal_plans.rs  mod.rs  quick_lists.rs  recipes.rs  shopping_lists.rs
src-tauri/src/db/: ingredients.rs  items.rs  manual_items.rs  meal_plans.rs  mod.rs  pool.rs  quick_lists.rs  recipes.rs  shopping_lists.rs
src-tauri/src/error/: mod.rs
src-tauri/src/http/: mod.rs
src-tauri/src/logging/: mod.rs  redact.rs
src-tauri/src/parser/: duration.rs  ingredients.rs  jsonld.rs  mod.rs
src-tauri/src/parser/fixtures/: array_type.html  full_recipe.html  graph_structure.html  howto_sections.html  image_variations.html  minimal.html  string_instructions.html
src-tauri/src/utils/: mod.rs  units.rs
tests/: setup.ts  testUtils.ts
(+189 files in other folders)
