[package]
name = "feast"
version = "0.1.0"
description = "A Tauri v2 application"
authors = [""]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "feast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.20"
html-escape = "0.2"

# Async runtime
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Error handling
thiserror = "1"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# HTTP client
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Logging
log = "0.4"

# Tauri plugins
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
wiremock = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
